--- a/html/Carrie-portfolio-artwork.html
+++ b/html/Carrie-portfolio-artwork.html
@@ -64,13 +64,13 @@
     <div class="content-artwork">
         <div class="container">
             <div class="top-button-group wow animated pulse">
-                <a class="btn top-button-color corporate-identity" role="button">Corporate Identity</a>
-                <a class="btn top-button-color advertising" role="button">Advertising</a>
-                <a class="btn top-button-color drawing" role="button">Drawing</a>
-                <a class="btn top-button-color illustration" role="button">Illustration</a>
-                <a class="btn top-button-color photography" role="button">Photography</a>
-                <a class="btn top-button-color packaging" role="button">Packaging</a>
-                <a class="btn top-button-color animation" role="button">Animation</a>
+               <a href="#CorporateIdentity"  class="btn top-button-color corporate-identity" role="button">Corporate Identity</a>
+                <a href="#Ad" class="btn top-button-color advertising" role="button">Advertising</a>
+                <a href="#Drawing" class="btn top-button-color drawing" role="button">Drawing</a>
+                <a href="#Illustration" class="btn top-button-color illustration" role="button">Illustration</a>
+                <a href="#Photography" class="btn top-button-color photography" role="button">Photography</a>
+                <a href="#Packaging" class="btn top-button-color packaging" role="button">Packaging</a>
+                <a href="#Animation" class="btn top-button-color animation" role="button">Animation</a>
             </div>
             <div id="CorporateIdentity" class="subjek wow animated fadeIn delay120">
                 <h1>Corporate Identity</h1>
@@ -228,50 +228,6 @@
     </script>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://carrie99teoh.github.io/paroller.js-master/dist/jquery.paroller.min.js"></script>
-    <script>
-        $(function(){
-            $('a.corporate-identity').click(function(){
-                var H = $("#CorporateIdentity").offset().top;     //用变量获取元素div块的高度H
-                $("body").animate({"scrollTop":H},1200);  //speed
-            })
-        })
-        $(function(){
-            $('a.advertising').click(function(){
-                var H = $("#Advertising").offset().top;     //用变量获取元素div块的高度H
-                $("body").animate({"scrollTop":H},1200);  //speed
-            })
-        })
-        $(function(){
-            $('a.drawing').click(function(){
-                var H = $("#Drawing").offset().top;     //用变量获取元素div块的高度H
-                $("body").animate({"scrollTop":H},1200);  //speed
-            })
-        })
-        $(function(){
-            $('a.illustration').click(function(){
-                var H = $("#Illustration").offset().top;     //用变量获取元素div块的高度H
-                $("body").animate({"scrollTop":H},1200);  //speed
-            })
-        })
-        $(function(){
-            $('a.photography').click(function(){
-                var H = $("#Photography").offset().top;     //用变量获取元素div块的高度H
-                $("body").animate({"scrollTop":H},1200);  //speed
-            })
-        })
-        $(function(){
-            $('a.packaging').click(function(){
-                var H = $("#Packaging").offset().top;     //用变量获取元素div块的高度H
-                $("body").animate({"scrollTop":H},1200);  //speed
-            })
-        })
-        $(function(){
-            $('a.animation').click(function(){
-                var H = $("#Animation").offset().top;     //用变量获取元素div块的高度H
-                $("body").animate({"scrollTop":H},1200);  //speed
-            })
-        })
-        </script>
         <!-- wow js -->
         <script src="https://carrie99teoh.github.io/wow-master/dist/wow.min.js"></script>
         <script>
