--- a/html/Carrie-portfolio-resume.html
+++ b/html/Carrie-portfolio-resume.html
@@ -74,8 +74,8 @@
                     
                     <hr />
                     <p>I appreciate your time and consideration and hope that my skills and experience align with your needs.</p>
-                    <a href="https://drive.google.com/file/d/1Z_HHkwKnlPLoaD6kWYnJW7fS9bQhUayX/view?usp=sharing">View</a>
-                    <a href="../image/resume.docx">download</a>
+                    <a href="https://drive.google.com/file/d/13eJi9JTyZDWTB7JCjj8-wzvFMqej9hRA/view?usp=sharing">View</a>
+                    <a href="https://doc-0o-94-docs.googleusercontent.com/docs/securesc/e8d8le8e36uu9qo28pl1888mqhubq9be/r5bl18c14o9uvblr70fk9rtn9rhelmut/1574856000000/06767177340869187369/06767177340869187369/13eJi9JTyZDWTB7JCjj8-wzvFMqej9hRA?e=download&authuser=0&nonce=21nmsk53hiru2&user=06767177340869187369&hash=5lo1qdiau40u">download</a>
                 </div>
             </div>
             <div class="clearfix"></div>
